# gluten

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.py
include/: Camera.h  GraphicsContext.h  GraphicsManager.h  InputManager.h  ObjectGenerator.h  ResourceManager.h  Shader.h  TerrainGenerator.h  config.h
source/: Camera.cpp  GraphicsContext.cpp  GraphicsManager.cpp  InputManager.cpp  ObjectGenerator.cpp  ResourceManager.cpp  Shader.cpp  TerrainGenerator.cpp  main.cpp
source/shaders/: colorfragmentshader.glsl  colorvertexshader.glsl  fragmentshader.glsl  uvfragmentshader.glsl  uvvertexshader.glsl  vertexshader.glsl
